2007-12-14  Akim Demaille  <demaille@gostai.com>

	Fix CPP guard.
	* include/kernel/userver.hh: here.

2007-12-13  Akim Demaille  <demaille@gostai.com>

	Specify URBI_SERVER.
	* tests-local.mk: We use urbi-console.

2007-12-13  Akim Demaille  <akim.demaille@free.fr>

	Install uconsole as urbi-console.
	* src/Makefile.am: Do it.
	* src/console.cc: Rename as...
	* src/console-server.cc: this to match the class name.

2007-12-13  Akim Demaille  <akim.demaille@free.fr>

	Use misc::has.
	* src/uobject.cc: here.

2007-12-12  Akim Demaille  <akim.demaille@free.fr>

	Factor.
	* src/uobject.cc (remove): New.
	Use it.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Don't forget to run 1.5 tests...
	* tests-local.mk: here.

2007-12-11  Guillaume Deslandes  <deslandes@gostai.com>

	Fix memleaks, remove extra deletes.
	* src/ucommand.cc: Here.
	The deletes of modif_* were hidden in delete parameters.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Fix dist.
	* src/Makefile.am: Ship ubinder.hxx.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Simplify UBinders.
	* src/ubinder.hh, src/ubinder.cc (addMonitor): Use
	(locateMonitor): this.
	Simplify it.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	More unbind_monitor uses.
	* src/ubinder.hh, src/ubinder.hxx: Make it more generic.
	* src/uobj.cc: Use it.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	More factoring.
	There is nothing like factoring to understand :(
	* src/ubinder.hh, src/ubinder.hxx (removeMonitor): Rename as...
	(remove_monitor): this.
	(unbind_monitor): new.
	* src/uconnection.cc, src/uobj.cc: Adjust to use them.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Less includes.
	* include/kernel/utypes.hh: Remove useless includes.
	Adjust dependencies.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	uwait-counter.hh.
	* src/uwait-counter.hh: New.
	* include/kernel/utypes.hh: Extracted from here.
	* include/kernel/fwd.hh: Adjust.
	* src/Makefile.am: Ditto.
