@@ -6,22 +6,28 @@
 #ifdef HAVE_UNISTD_H
 # include <unistd.h>
 #endif
+#include "libport/sysexits.hh"
 #include "libport/windows.hh"
 #include <fstream>
 
+#include "libport/cli.hh"
 #include "libport/utime.hh"
 
+// Inclusion order matters for windows. Leave userver.hh after network.hh.
+#include <network/bsdnet/network.hh>
 #include "kernel/userver.hh"
 #include "kernel/uconnection.hh"
 
 #include "ubanner.hh"
 
+const char* program_name;
+
 class ConsoleServer
   : public UServer
 {
 public:
-  ConsoleServer(int freq)
-    : UServer(freq, 64000000, "console")
+  ConsoleServer(int period)
+    : UServer(period, 64000000, "console")
   {
     // FIXME: Add support for : in the path.
     if (const char* cp = getenv ("URBI_PATH"))
@@ -81,7 +87,7 @@ namespace
 {
   static
   void
-  usage (const char* program_name, int estatus)
+  usage ()
   {
     std::cout <<
       "usage: " << program_name << " [OPTIONS] [FILE]\n"
@@ -89,9 +95,13 @@ namespace
       "  FILE    to load\n"
       "\n"
       "Options:\n"
-      "  -h, --help     display this message and exit successfully\n"
-      "  -v, --version  display version information\n";
-    exit (estatus);
+      "  -h, --help           display this message and exit successfully\n"
+      "  -v, --version        display version information\n"
+      "  -P, --period PERIOD  base URBI interval in milliseconds\n"
+      "  -p, --port PORT      specify the tcp port URBI will listen to.\n"
+      "  -w FILE              write port number to specified file.\n"
+      ;
+    exit (EX_OK);
   }
 
   static
@@ -106,8 +116,17 @@ namespace
 int
 main (int argc, const char* argv[])
 {
+  program_name = argv[0];
+
   // Input file.
-  const char *in = "/dev/stdin";
+  const char* in = "/dev/stdin";
+  /// The period.
+  int arg_period = 32;
+  /// The port to use.  0 means automatic selection.
+  int arg_port = 0;
+  /// Where to write the port we use.
+  const char* arg_port_filename = 0;
+
   // Parse the command line.
   {
     int argp = 1;
@@ -116,9 +135,17 @@ main (int argc, const char* argv[])
       std::string arg = argv[i];
 
       if (arg == "-h" || arg == "--help")
-	usage(argv[0], 0);
+	usage();
+      else if (arg == "--period" || arg == "-P")
+	arg_period = libport::convert_argument<int> ("period", argv[++i]);
+      else if (arg == "--port" || arg == "-p")
+	arg_port = libport::convert_argument<int> (arg, argv[++i]);
       else if (arg == "-v" || arg == "--version")
 	version();
+      else if (arg == "-w")
+	arg_port_filename = argv[++i];
+      else if (arg[0] == '-')
+	libport::invalid_option (arg);
       else
 	// An argument.
 	switch (argp++)
@@ -134,7 +161,18 @@ main (int argc, const char* argv[])
     }
   }
 
-  ConsoleServer s (10);
+  int port = Network::createTCPServer(arg_port, "localhost");
+  if (!port)
+  {
+    std::cerr << "cannot bind to port " << arg_port
+	      << " on localhost" << std::endl;
+    exit (EX_UNAVAILABLE);
+  }
+  if (arg_port_filename)
+    std::ofstream(arg_port_filename, std::ios::out) << port << std::endl;
+  Network::startNetworkProcessingThread();
+
+  ConsoleServer s (arg_period);
 
   s.initialize ();
   UConnection& c = s.getGhostConnection ();
@@ -153,8 +191,8 @@ main (int argc, const char* argv[])
   DEBUG(("Going to work...\n"));
   while (true)
   {
-    ufloat freq = s.getFrequency() * 1000;
-    while (libport::utime() < (startTime + freq))
+    ufloat period = s.getFrequency() * 1000;
+    while (libport::utime() < startTime + period)
       usleep (1);
     s.work ();
   }
